[package]
name = "tracing-gelf"
version = "0.4.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/hlb8122/tracing-gelf"
repository = "https://github.com/hlb8122/tracing-gelf"
keywords = ["graylog", "logging", "tracing", "tcp", "udp"]
description = """
A Graylog tracing library.
"""
categories = ["development-tools"]
exclude = ["/.travis.yml"]

[badges]
travis-ci = { repository = "hlb8122/tracing-gelf" }

[dependencies]
bytes = "1.0"
hostname = "0.3.1"
serde_json = "1.0.57"
futures-channel = "0.3.5"
futures-util = { version = "0.3.5", features = ["sink"] }
tokio = { version = "1.0", features = ["io-util", "time", "net"] }
tokio-util = { version = "0.6", features = ["codec", "net"] }
tracing-core = "0.1.12"
tracing-subscriber = "0.2.10"

tokio-rustls = { version = "0.22", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.22"
